# pgr_camera

./: .gitignore  CMakeLists.txt  manifest.xml  package.xml
cfg/: PGRCamera.cfg  PgrCamera.cfg  PgrGigECamera.cfg
include/: CameraNode.h  CommandLineParsing.h  GigECameraNode.h  PgrCamera.h  PgrCameraFactory.h  PgrCameraNode.h  PgrGigECameraNode.h  PgrTypes.h
include/libflycapcam/: FlycapCamera.h  FlycapCameraBase.h  FlycapCameraGigE.h  FlycapCameraManager.h  FlycapTypes.h
include/pgr_camera/: Camera.h  PgrCamera.h  PgrCameraFactory.h  pgr_camera.h  rolling_sum.h
launch/: all.launch  mono.launch  remote-mono.launch  stereo_only.launch
src/libflycapcam/: FlycapCameraBase.cpp  FlycapCameraGigE.cpp  FlycapCameraManager.cpp  FlycapTypes.cpp  PgrCamera.cpp  PgrCameraFactory.cpp
src/libpgrcam/: CMakeLists.txt  Camera.cpp  PgrCamera.cpp  PgrCameraFactory.cpp  pgr_camera.cpp
src/node/: CameraNode.cpp  CameraSynchronizer.cpp  CommandLineParsing.cpp  GigECameraNode.cpp  PgrCameraNode.cpp  PgrGigECameraNode.cpp  main.cpp
src/nodes/: CMakeLists.txt  CameraSynchronizer.cpp  CameraSynchronizer.h  PgrCameraNode.cpp  PgrCameraNode.h  PgrGigECameraNode.h  main.cpp  pgr_camera_node.cpp
